--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #0074c2;
+    background-color: #c29500;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
